[gd_scene load_steps=5 format=2]

[ext_resource path="res://Global/Global.gd" type="Script" id=1]
[ext_resource path="res://Music2.mp3" type="AudioStream" id=2]
[ext_resource path="res://Music3.mp3" type="AudioStream" id=3]
[ext_resource path="res://Music1.mp3" type="AudioStream" id=4]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="finished" from="AudioStreamPlayer2" to="." method="_on_AudioStreamPlayer2_finished"]
[connection signal="finished" from="AudioStreamPlayer3" to="." method="_on_AudioStreamPlayer3_finished"]
